--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -13,8 +13,8 @@
     "noEmit": true,
 
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
   "include": ["vite.config.ts"]
