--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,5 +19,5 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "src/api/.ts"]
 }
